--- a/meeting/templates/staff_reservation_list.html
+++ b/meeting/templates/staff_reservation_list.html
@@ -19,7 +19,7 @@
   </form>
 </div>
 
-<table class="w3-table w3-striped w3-bordered w3-hoverable">
+<table id="reservation_table" class="w3-table w3-striped w3-bordered w3-hoverable">
   <tr class="w3-theme">
     <th>ID</th>
     <th>Time Slot</th>
