add filter to fuel reservation list, remove unused views

--- a/meeting/templates/staff_fuel_reservation_list.html
+++ b/meeting/templates/staff_fuel_reservation_list.html
@@ -14,6 +14,15 @@
   <hr>
 </div>
 
+<div class="w3-container">
+  <form method="get">
+    {% include 'form.html' with form=filter.form %}
+
+    <input type="submit" class="w3-button w3-green w3-right"></input>
+  </form>
+</div>
+
+
 <table id="reservation_table" class="w3-table w3-striped w3-bordered w3-hoverable">
   <tr class="w3-theme">
     <th>ID</th>
