--- a/meeting/templates/staff_reservation_list.html
+++ b/meeting/templates/staff_reservation_list.html
@@ -1,23 +1,72 @@
 {% extends "base_generic.html" %}
+{% load widget_tweaks %}
 
 
 {% block content %}
-<div class="w3-container">
-  <div class="w3-container w3-half">
-    <b class="w3-xlarge">Pilots Reservations</b>
+
+<h3>Pilots Reservations</h3>
+<hr>
+
+<form method="get">
+  <div class="card card-body bg-light">
+  <div class="row">
+    <div class="form-group col-sm">
+        {{ filter.form.reservation_number.label_tag }}
+        {% render_field filter.form.reservation_number class="form-control" %}
+    </div>
+    <div class="form-group col-sm">
+        {{ filter.form.ulm__pilot__user__first_name.label_tag }}
+        {% render_field filter.form.ulm__pilot__user__first_name class="form-control" %}
+    </div>
+    <div class="form-group col-sm">
+        {{ filter.form.ulm__pilot__user__last_name.label_tag }}
+        {% render_field filter.form.ulm__pilot__user__last_name class="form-control" %}
+    </div>
   </div>
-</div>
-<div class="w3-container">
-  <hr>
+  <div class="row">
+    <div class="form-group col-sm">
+        {{ filter.form.ulm__imatriculation.label_tag }}
+        {% render_field filter.form.ulm__imatriculation class="form-control" %}
+    </div>
+    <div class="form-group col-sm">
+        {{ filter.form.ulm__radio_id.label_tag }}
+        {% render_field filter.form.ulm__radio_id class="form-control" %}
+    </div>
+    <div class="form-group col-sm">
+        {{ filter.form.time_slot.label_tag }}
+        {% render_field filter.form.time_slot class="form-control" %}
+    </div>
+  </div>
+  <div class="row">
+    <div class="form-group col-sm">
+        {{ filter.form.fuel_reservation.label_tag }}
+        {% render_field filter.form.fuel_reservation class="form-control" %}
+    </div>
+    <div class="form-group col-sm">
+        {{ filter.form.flight_plan.label_tag }}
+        {% render_field filter.form.flight_plan class="form-control" %}
+    </div>
+    <div class="form-group col-sm">
+        {{ filter.form.passanger.label_tag }}
+        {% render_field filter.form.passanger class="form-control" %}
+    </div>
+    <div class="form-group col-sm">
+        {{ filter.form.esthetic_cup.label_tag }}
+        {% render_field filter.form.esthetic_cup class="form-control" %}
+    </div>
+    <div class="form-group col-sm">
+        {{ filter.form.to_sell.label_tag }}
+        {% render_field filter.form.to_sell class="form-control" %}
+    </div>
+  </div>
+
+
+  <!-- {% include 'form.html' with form=filter.form %} -->
+
+  <button type="submit" class="btn btn-primary">Search</button>
 </div>
 
-<div class="w3-container">
-  <form method="get">
-    {% include 'form.html' with form=filter.form %}
-
-    <input type="submit" class="w3-button w3-green w3-right"></input>
-  </form>
-</div>
+</form>
 
 <table id="reservation_table" class="w3-table w3-striped w3-bordered w3-hoverable">
   <tr class="w3-theme">
