--- a/templates/base/base_generic.html
+++ b/templates/base/base_generic.html
@@ -26,7 +26,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
 
 
 <!-- Main content: shift it to the right by 250 pixels when the sidebar is visible -->
-<div class="w3-main w3-padding-64 content">
+<div class="content w3-padding-64 w3-container">
 
   {% block content %}
   {% endblock %}
