--- a/templates/base/base_form.html
+++ b/templates/base/base_form.html
@@ -69,4 +69,7 @@ input[type=submit] {
     <input type="submit" class="w3-button w3-green">Submit</input>
   </form>
 </div>
+
+{%  block afterform %}
+{% endblock %}
 {% endblock %}
