--- a/meeting/templates/staff_fuel_reservation_list.html
+++ b/meeting/templates/staff_fuel_reservation_list.html
@@ -101,7 +101,8 @@
     <td class="center">
       <button type="button"
               class="btn btn-warning btn-sm js-update-fuel-served"
-              data-url="{% url 'ajax_fuel_served' res.id %}">
+              data-url="{% url 'ajax_fuel_served' res.id %}"
+              data-contener-id="modal-update-fuel">
         <span class="glyphicon glyphicon-pencil"></span> Validate
       </button>
     </td>
@@ -113,7 +114,7 @@
 {% include 'pagination.html' %}
 
 
-<div class="modal fade" id="modal-fuel-served">
+<div class="modal fade" id="modal-update-fuel">
     <div class="modal-dialog">
       <div class="modal-content">
 
