--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -14,12 +14,12 @@
   }
 </style>
 
-<footer class="footer">
-  <div class="w3-container w3-theme-l2 w3-padding-32">
+<footer class="footer page-footer">
+  <div class="w3-container w3-padding-32">
     <h4>Footer</h4>
   </div>
 
-  <div class="w3-container w3-theme-l1">
+  <div class="w3-container">
     <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
   </div>
 </footer>
