--- a/templates/includes/pagination.html
+++ b/templates/includes/pagination.html
@@ -1,25 +1,47 @@
 {% if is_paginated %}
-<div class="w3-center w3-pading-32">
-  <div class="w3-bar">
+<nav aria-label="Page navigation">
+  <ul class="pagination justify-content-center">
     {% if page_obj.has_previous %}
-      <a href="?page={{ page_obj.previous_page_number }}" class="w3-bar-item w3-button w3-hover-theme"><<</a>
+    <li class="page-item">
+      <a class="page-link" href="?page={{ page_obj.previous_page_number }}" aria-label="Previous">
+        <span aria-hidden="true">&laquo;</span>
+        <span class="sr-only">Previous</span>
+      </a>
+    </li>
     {% else %}
-      <span class="w3-bar-item w3-button"><<</span>
+    <li class="page-item disabled">
+      <a class="page-link" href="#" aria-label="Previous">
+        <span aria-hidden="true">&laquo;</span>
+        <span class="sr-only">Previous</span>
+      </a>
+    </li>
     {% endif %}
 
     {% for page_num in paginator.page_range %}
       {% if page_obj.number == page_num %}
-        <span class="w3-bar-item w3-button w3-hover-theme w3-theme">{{ page_num }}</span>
+      <li class="page-item active">
+        <a class="page-link" href="#">{{ page_num }} <span class="sr-only">(current)</span></a>
+      </li>
       {% else %}
-        <a href="?page={{ page_num }}" class="w3-bar-item w3-button w3-hover-theme">{{ page_num }}</a>
+      <li class="page-item"><a class="page-link" href="?page={{ page_num }}">{{ page_num }}</a></li>
       {% endif %}
     {% endfor%}
 
     {% if page_obj.has_next %}
-      <a href="?page={{ page_obj.next_page_number }}" class="w3-bar-item w3-button w3-hover-theme">>></a>
+      <li class="page-item">
+        <a class="page-link" href="?page={{ page_obj.next_page_number }}" aria-label="Next">
+          <span aria-hidden="true">&raquo;</span>
+          <span class="sr-only">Next</span>
+        </a>
+      </li>
     {% else %}
-      <span class="w3-bar-item w3-button">>></span>
+      <li class="page-item disabled">
+        <a class="page-link" href="#" aria-label="Next">
+          <span aria-hidden="true">&raquo;</span>
+          <span class="sr-only">Next</span>
+        </a>
+      </li>
     {% endif %}
-  </div>
-</div>
+  </ul>
+</nav>
 {% endif %}
