--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -1,122 +1,99 @@
-<!-- Navbar -->
-<script>
-function show_sidebar() {
-    var x = document.getElementById("navDemo");
-    if (x.className.indexOf("w3-show") == -1) {
-        x.className += " w3-show";
-    } else {
-        x.className = x.className.replace(" w3-show", "");
-    }
-}
+<nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
+  <a class="navbar-brand" href="{% url 'index' %}">ULMBLois</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNavDropdown">
+    {% with url_name=request.resolver_match.url_name %}
+    <ul class="navbar-nav">
+      <li class="nav-item {% if url_name == '#' %}active{% endif %}">
+        <a href="#" class="nav-link">On Site</a>
+      </li>
+      <li class="nav-item {% if url_name == '#' %}active{% endif %}">
+        <a href="#" class="nav-link">Pilotes Informations</a>
+      </li>
+      <li class="nav-item {% if url_name == '#' %}active{% endif %}">
+        <a href="#" class="nav-link">About</a>
+      </li>
+      <li class="nav-item {% if url_name == '#' %}active{% endif %}">
+        <a href="#" class="nav-link">Contact</a>
+      </li>
+      </ul>
+      {% if user.is_authenticated %}
+        {% if user.is_staff %}
+        <ul class="navbar-nav">
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownStaffMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Management
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdownStaffMenuLink">
+            <a href="{% url 'staff_reservation_list'%}" class="dropdown-item">Pilot Reservations</a>
+            <a href="{% url 'staff_fuel_res_list'%}" class="dropdown-item">Fuel Reservations</a>
+          </div>
+        </li>
+        </ul>
+        {% endif %}
+        <ul class="navbar-nav ml-auto">
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownUserMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <i class='fas fa-user'></i> {{ user.get_username }}
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdownUserMenuLink">
+            <a href="{% url 'pilot' user.pilot.pk%}" class="dropdown-item">Profile</a>
+            <a href="{% url 'pilot_reservation' %}" class="dropdown-item">My Reservations</a>
+            <a href="{% url 'pilot_ulm_list' %}" class="dropdown-item">My ULMs</a>
+          </div>
+        </li>
+        <li class="nav-item">
+                <a href="{% url 'logout'%}?next={{request.path}}" class="nav-link">Logout</a>
+        </li>
+        </ul>
+      {% else %}
+      <ul class="navbar-nav ml-auto">
+      <li class="nav-item">
+        <button  data-toggle="modal" data-target="#loginModal"class="btn btn-outline-success">Login</button>
+      </li>
+      <li class="nav-item">
+        <a href="{% url 'signup'%}?next={{request.path}}" class="nav-link">Sign Up</a>
 
-function show_accordion(id) {
-    var x = document.getElementById(id);
-    if (x.className.indexOf("w3-show") == -1) {
-        x.className += " w3-show";
-        x.previousElementSibling.className += " w3-green";
-    } else {
-        x.className = x.className.replace(" w3-show", "");
-        x.previousElementSibling.className =
-        x.previousElementSibling.className.replace(" w3-green", "");
-    }
-}
-</script>
-
-<!-- Navbar on small screens (remove the onclick attribute if you want the navbar to always show on top of the content when clicking on the links) -->
-<div id="navDemo" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:40px">
-  {% if user.is_authenticated %}
-  {% if user.is_staff %}
-  <div class="w3-accordion">
-    <button onclick="show_accordion('staffAcc')" href="#"class="w3-hover-white w3-bar-item "><i class='fas fa-user'></i> {{ user.get_username }} <i class="fa fa-caret-down w3-right"></i></button>
-    <div id="staffAcc" class="w3-accordion-content w3-white w3-card-4 w3-hide">
-        <a href="#" class="w3-bar-item w3-button">Pilotes Reservation</a>
-    </div>
-  </div>
-  {% endif %}
-  <div class="w3-accordion">
-    <button onclick="show_accordion('userAcc')" href="#"class="w3-green w3-hover-white w3-bar-item "><i class='fas fa-user'></i> {{ user.get_username }} <i class="fa fa-caret-down w3-right"></i></button>
-    <div id="userAcc" class="w3-accordion-content w3-white w3-card-4 w3-hide">
-          <a href="{% url 'pilot' user.pilot.pk%}" class="w3-bar-item w3-button">Profile</a>
-          <a href="{% url 'pilot_reservation' %}" class="w3-bar-item w3-button">My Reservations</a>
-          <a href="{% url 'pilot_ulm_list' %}" class="w3-bar-item w3-button">My ULMs</a>
-    </div>
-  </div>
-  <a href="{% url 'logout'%}?next={{request.path}}" class="w3-bar-item w3-hover-white">Logout</a>
-
-  {% else %}
-    <button onclick="document.getElementById('loginModal').style.display='block'" class="w3-button w3-green">Login</button>
-    <a href="{% url 'signup'%}?next={{request.path}}" class="w3-button w3-hover-white">Sign Up</a>
-  {% endif %}
-
-
-  <a href="#" class="w3-bar-item w3-button w3-hover-white">On Site</a>
-  <a href="#" class="w3-bar-item w3-button w3-hover-white">Pilotes Informations</a>
-  <a href="#" class="w3-bar-item w3-button w3-hover-white">About</a>
-  <a href="#" class="w3-bar-item w3-button w3-hover-white">Contact</a>
-</div>
-
-<!-- Nav bar for medium and small screens -->
-<div class="w3-top">
-  <div class="w3-bar w3-theme w3-left-align w3-large">
-    <a class="w3-bar-item w3-button w3-left w3-hide-large w3-hover-white w3-large w3-theme-l1" href="javascript:void(0)" onclick="show_sidebar()"><i class="fa fa-bars"></i></a>
-    <a href="{% url 'index' %}" class="w3-bar-item w3-button w3-hide-small w3-theme-l1"><i class="fas fa-home"></i></a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-hover-white">On Site</a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Pilotes Informations</a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-hover-white">About</a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Contact</a>
-
-    {% if user.is_authenticated %}
-      {% if user.is_staff %}
-      <div class="w3-dropdown-hover w3-hide-small">
-        <button class="w3-hover-white w3-button">Mangement </button>
-        <div class="w3-dropdown-content w3-bar-block w3-card-4">
-          <a href="{% url 'staff_reservation_list'%}" class="w3-bar-item w3-button">Pilot Reservations</a>
-          <a href="{% url 'staff_fuel_res_list'%}" class="w3-bar-item w3-button">Fuel Reservations</a>
-        </div>
-      </div>
+      </li>
+      </ul>
       {% endif %}
 
-      <a href="{% url 'logout'%}?next={{request.path}}" class="w3-button w3-hide-small w3-hover-white w3-right">Logout</a>
-      <div class="w3-dropdown-hover w3-hide-small w3-right">
-        <button class="w3-green w3-hover-white w3-button"><i class='fas fa-user'></i> {{ user.get_username }}</button>
-        <div class="w3-dropdown-content w3-bar-block w3-card-4">
-          <a href="{% url 'pilot' user.pilot.pk%}" class="w3-bar-item w3-button">Profile</a>
-          <a href="{% url 'pilot_reservation' %}" class="w3-bar-item w3-button">My Reservations</a>
-          <a href="{% url 'pilot_ulm_list' %}" class="w3-bar-item w3-button">My ULMs</a>
-        </div>
-      </div>
-
-    {% else %}
-      <a href="{% url 'signup'%}?next={{request.path}}" class="w3-button w3-hide-small w3-hover-white w3-right">Sign Up</a>
-      <button onclick="document.getElementById('loginModal').style.display='block'" class="w3-button w3-green  w3-right">Login</button>
-    {% endif %}
-
-
+    {% endwith %}
   </div>
-</div>
+</nav>
+
 
 <!-- Login modal -->
-<div id="loginModal" class="w3-modal">
-    <div class="w3-modal-content w3-card-4 w3-animate-zoom" style="max-width:600px">
+<div class="modal" id="loginModal" tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <form action="{% url 'login' %}" method="post">
+          {% csrf_token %}
 
-      <div class="w3-center"><br>
-        <span onclick="document.getElementById('loginModal').style.display='none'" class="w3-button w3-xlarge w3-transparent w3-display-topright" title="Close Modal">×</span>
-      </div>
-      <form class="w3-container" action="{% url 'login' %}" method="post">
-        {% csrf_token %}
-        <div class="w3-section">
-          <label><b>Username</b></label>
-          <input class="w3-input w3-border w3-margin-bottom" type="text" placeholder="Username" name="username" required>
-          <label><b>Password</b></label>
-          <input class="w3-input w3-border" type="password" placeholder="Password" name="password" required>
-          <button class="w3-button w3-block w3-green w3-section w3-padding" type="submit">Login</button>
-        </div>
+          <div class="modal-header">
+            <h4 class="modal-title">Login</h4>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="form-group">
+              <label for="usernameInput">Username</label>
+              <input class="form-control" type="text" id="usernameInput" placeholder="Username" name="username" required>
+            </div>
+            <div class="form-group">
+              <label for="passwordInput">Password</label>
+              <input class="form-control" type="password" id="passwordInput" placeholder="Password" name="password" required>
+            </div>
+          </div>
+          <div class="modal-footer">
+              <a href="{% url 'password_reset' %}">Lost password?</a>
+              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+              <button type="submit" class="btn btn-primary">Login</button>
+          </div>
       </form>
-
-      <div class="w3-container w3-border-top w3-padding-16 w3-light-grey">
-        <button onclick="document.getElementById('loginModal').style.display='none'" type="button" class="w3-button w3-red">Cancel</button>
-        <span class="w3-right w3-padding w3-hide-small"><a href="{% url 'password_reset' %}">Lost password?</a></span>
       </div>
-
     </div>
   </div>
