TimeSlot inline with Meeting in admin + minor html change

--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -51,7 +51,7 @@
       {% else %}
       <ul class="navbar-nav ml-auto">
       <li class="nav-item">
-        <button  data-toggle="modal" data-target="#loginModal"class="btn btn-outline-success">Login</button>
+        <button  data-toggle="modal" data-target="#loginModal"class="btn btn-default">Login</button>
       </li>
       <li class="nav-item">
         <a href="{% url 'signup'%}?next={{request.path}}" class="nav-link">Sign Up</a>
