--- a/templates/base/base_generic.html
+++ b/templates/base/base_generic.html
@@ -21,8 +21,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
 {% include 'navbar.html'%}
 
 
-<!-- Main content: shift it to the right by 250 pixels when the sidebar is visible -->
-<div class="content w3-padding-64 w3-container">
+<div class="content">
 
   {% block content %}
   {% endblock %}
