--- a/meeting/templates/pilot_reservation_list.html
+++ b/meeting/templates/pilot_reservation_list.html
@@ -2,34 +2,27 @@
 
 
 {% block content %}
-<div class="w3-container">
-  <div class="w3-container w3-half">
-    <b class="w3-xlarge">Your Reservations</b>
-  </div>
-  <div class="w3-container w3-half">
-    <a href="{% url 'pilot_create_reservation' %}" class="w3-button w3-green w3-right">Add New</a>
-  </div>
-</div>
-<div class="w3-container">
-  <hr>
+<div class="jumbotron">
+    <h2>Your Reservations</h2>
+    <a class="btn btn-success pull-left" role="button" href="{% url 'pilot_create_reservation' %}">
+      <span class="fas fa-plus-circle"></span> Add New
+    </a>
+
 </div>
 
-<div class="w3-container">
+
+
+<div class="mx-4">
 {% for res in reservation_list %}
-<div class="w3-panel w3-card">
-<div class="w3-half">
-<p><b>Reservation Number:</b> {{res.reservation_number}}</p>
-<p><b>Arrival time slot:</b> {{res.time_slot}}</p>
-</div>
-<div class="w3-half">
-<p><b>Event:</b> {{res.time_slot.meeting}}</p>
-</div>
-{% if res.is_active %}
-<div class="w3-container w3-right">
-  <p><a href="{% url 'pilot_delete_reservation' res.pk %}" class="w3-button w3-red">Delete</a>
-  <a href="{% url 'pilot_update_reservation' res.pk %}" class="w3-button w3-green">Edit</a></p>
-</div>
-{% endif %}
+<div class="card mb-3">
+  <div class="card-body">
+    <h5 class="card-title">{{res.time_slot.meeting}}</h5>
+    <h6 class="card-subtitle mb-2 text-muted">{{res.reservation_number}}</h6>
+    {% if res.is_active %}
+    <a href="{% url 'pilot_update_reservation' res.pk %}" class="btn btn-warning"><span class="fas fa-pen"></span> Edit</a>
+    <a href="{% url 'pilot_delete_reservation' res.pk %}" class="btn btn-danger"><span class="fas fa-minus-circle"></span> Delete</a>
+    {% endif %}
+  </div>
 </div>
 {% endfor %}
 </div>
