start refactoring of staff reservation edition

--- a/meeting/templates/staff_fuel_reservation_list.html
+++ b/meeting/templates/staff_fuel_reservation_list.html
@@ -103,7 +103,7 @@
               class="btn btn-warning btn-sm js-update-fuel-served"
               data-url="{% url 'ajax_fuel_served' res.id %}"
               data-contener-id="modal-update-fuel">
-        <span class="glyphicon glyphicon-pencil"></span> Validate
+        <span class="fas fa-pen"></span> Validate
       </button>
     </td>
   </tr>
