--- a/meeting/templates/staff_reservation_list.html
+++ b/meeting/templates/staff_reservation_list.html
@@ -1,6 +1,10 @@
 {% extends "base_generic.html" %}
 {% load widget_tweaks %}
+{% load static %}
 
+{% block javascript%}
+<script src="{% static 'js/ajax_reservation.js' %}"></script>
+{% endblock %}
 
 {% block content %}
 
@@ -99,8 +103,14 @@
     <td>{{res.esthetic_cup}}</td>
     <td class="center">
       <a href="#" class="btn btn-success">Validate</a>
-      <a href="{% url 'staff_edit_reservation' res.pk %}" class="btn btn-primary">Edit</a>
+      <!-- <a href="{% url 'staff_edit_reservation' res.pk %}" class="btn btn-primary">Edit</a> -->
       <a href="#" class="btn btn-warning">Print</a>
+      <button type="button"
+              class="btn btn-primary btn-sm js-update-reservation"
+              data-url="{% url 'staff_edit_reservation' res.pk %}"
+              data-contener-id="modal-update-reservation">
+        <span class="fas fa-pen"></span> Edit
+      </button>
     </td>
   </tr>
   {% endfor %}
@@ -109,4 +119,11 @@
 
 {% include 'pagination.html' %}
 
+<div class="modal fade" id="modal-update-reservation">
+    <div class="modal-dialog">
+      <div class="modal-content">
+
+      </div>
+    </div>
+</div>
 {% endblock %}
