--- a/meeting/templates/includes/ajax/staff_reservation_edit_partial.html
+++ b/meeting/templates/includes/ajax/staff_reservation_edit_partial.html
@@ -1,4 +1,4 @@
-<form method="post" action="{% url 'staff_edit_reservation' form.reservation_id.value %}" class="js-staff-update-reservation-form">
+<form method="post" action="{% url 'staff_edit_reservation' reservation %}" class="js-staff-update-reservation-form">
   {% csrf_token %}
   <div class="modal-header">
     <h4 class="modal-title">Update Reservation</h4>
