fix some staff edit reservation issues + make custom form

--- a/meeting/templates/staff_reservation_list.html
+++ b/meeting/templates/staff_reservation_list.html
@@ -120,7 +120,7 @@
 {% include 'pagination.html' %}
 
 <div class="modal fade" id="modal-update-reservation">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-lg">
       <div class="modal-content">
 
       </div>
