--- a/meeting/templates/includes/ajax/staff_reservation_edit_partial.html
+++ b/meeting/templates/includes/ajax/staff_reservation_edit_partial.html
@@ -178,6 +178,19 @@
             </small>
           </div>
 
+          <div class="form-group{% if form.type.errors %} is-invalid{% endif %}">
+            <label for="{{ form.type.id_for_label }}">{{ form.type.label }}</label>
+            {% render_field form.type class="form-control" %}
+            {% for error in form.type.errors %}
+              <p class="form-text text-danger">{{ form.type.error }}</p>
+            {% endfor %}
+            <small class="form-text text-muted">
+              {% if form.type.help_text %}
+                {{ form.type.help_text }}
+              {% endif %}
+            </small>
+          </div>
+
           <div class="form-group{% if form.imatriculation_country.errors %} is-invalid{% endif %}">
             <label for="{{ form.imatriculation_country.id_for_label }}">{{ form.imatriculation_country.label }}</label>
             {% render_field form.imatriculation_country class="form-control" %}
