--- a/pages/templates/faq.html
+++ b/pages/templates/faq.html
@@ -13,7 +13,7 @@
     <div class="card-header" id="heading{{question.id}}">
       <h5 class="mb-0">
         <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapse{{question.id}}" aria-expanded="false" aria-controls="collapse{{question.id}}">
-          {{question.question }}
+          {{question.number}} - {{question.question }}
         </button>
       </h5>
     </div>
