--- a/pages/templates/faq.html
+++ b/pages/templates/faq.html
@@ -1,34 +1,158 @@
 {% extends 'base_generic.html' %}
 
+{% block style %}
+
+// FAQ
+.faq-nav {
+    flex-direction: column;
+    margin: 0 0 32px;
+    border-radius: 2px;
+    border: 1px solid #ddd;
+    box-shadow: 0 1px 5px rgba(85, 85, 85, 0.15);
+
+    .nav-link {
+        position: relative;
+        display: block;
+        margin: 0;
+        padding: 13px 16px;
+        background-color: #fff;
+        border: 0;
+        border-bottom: 1px solid #ddd;
+        border-radius: 0;
+        color: #616161;
+        transition: background-color .2s ease;
+
+        &:hover {
+            background-color: #f6f6f6;
+        }
+
+        &.active {
+            background-color: #f6f6f6;
+            font-weight: 700;
+            color: rgba(0,0,0,.87);
+        }
+
+        &:last-of-type {
+            border-bottom-left-radius: 2px;
+            border-bottom-right-radius: 2px;
+            border-bottom: 0;
+        }
+
+        i.mdi {
+            margin-right: 5px;
+            font-size: 18px;
+            position: relative;
+        }
+    }
+}
+
+// TAB CONTENT
+.tab-content {
+    box-shadow: 0 1px 5px rgba(85, 85, 85, 0.15);
+
+    .card {
+        border-radius: 0;
+    }
+
+    .card-header {
+        padding: 15px 16px;
+        border-radius: 0;
+        background-color: #f6f6f6;
+
+        h5 {
+            margin: 0;
+
+            button {
+                display: block;
+                width: 100%;
+                padding: 0;
+                border: 0;
+                font-weight: 700;
+                color: rgba(0,0,0,.87);
+                text-align: left;
+                white-space: normal;
+
+                &:hover,
+                &:focus,
+                &:active,
+                &:hover:active {
+                    text-decoration: none;
+                }
+            }
+        }
+    }
+
+    .card-body {
+        p {
+            color: #616161;
+
+            &:last-of-type {
+                margin: 0;
+            }
+        }
+    }
+}
+
+
+// BORDER FIX
+.accordion {
+    .card {
+        &:not(:first-child) {
+            border-top: 0;
+        }
+    }
+}
+
+.collapse.show {
+    .card-body {
+        border-bottom: 1px solid rgba(0,0,0,.125);
+    }
+}
+{% endblock %}
+
 {% block content %}
 <h3>FAQ</h3>
 
-{% for topic in topics %}
-<h4>{{topic.topic_name}}</h4>
+    <div class="row">
+        <div class="col-sm-2">
+            <div class="nav flex-column nav-pills faq-nav" id="faq-tabs" role="tablist" aria-orientation="vertical">
+              {% for topic in topics%}
+              <a href="#tab{{topic.number}}" class="nav-link {% if forloop.first %}active{%endif%}" data-toggle="pill" role="tab" aria-controls="tab{{topic.number}}" aria-selected="{% if forloop.first %}true{%else%}false{%endif%}">
+                  <i class="mdi mdi-help-circle"></i> {{topic.topic_name}}
+              </a>
+              {% endfor %}
+            </div>
+        </div>
 
-<div id="accordion">
-  {% for question in topic.question.all %}
+        <div class="col-lg">
+            <div class="tab-content" id="faq-tab-content">
+              {% for topic in topics %}
+                <div class="tab-pane {% if forloop.first %}show active{%endif%}" id="tab{{topic.number}}" role="tabpanel" aria-labelledby="tab{{topic.number}}">
+                    <div class="accordion" id="accordion-tab-{{topic.number}}">
+                      {% for question in topic.question.all %}
+                        <div class="card">
+                            <div class="card-header" id="accordion-tab-{{topic.number}}-heading-{{question.number}}">
+                                <h5>
+                                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#accordion-tab-{{topic.number}}-content-{{question.number}}" aria-expanded="false" aria-controls="accordion-tab-{{topic.number}}-content-{{question.number}}">
+                                        {{question.number}} - {{question.question}}
+                                    </button>
+                                </h5>
+                            </div>
+                            <div class="collapse {% if forloop.first %}show{%endif%}" id="accordion-tab-{{topic.number}}-content-{{question.number}}" aria-labelledby="accordion-tab-{{topic.number}}-heading-{{question.number}}" data-parent="#accordion-tab-{{topic.number}}">
+                                <div class="card-body">
+                                    {{question.answer}}
+                                </div>
+                            </div>
+                        </div>
+                        {% endfor %}
+                    </div>
+                </div>
 
-  <div class="card">
-    <div class="card-header" id="heading{{question.id}}">
-      <h5 class="mb-0">
-        <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapse{{question.id}}" aria-expanded="false" aria-controls="collapse{{question.id}}">
-          {{question.number}} - {{question.question }}
-        </button>
-      </h5>
+              {% endfor %}
+            </div>
+        </div>
     </div>
 
-    <div id="collapse{{question.id}}" class="collapse" aria-labelledby="heading{{question.id}}" data-parent="#accordion">
-      <div class="card-body">
-      {{question.answer}}
-      </div>
-    </div>
-  </div>
-  {% endfor %}
 
-</div>
-{% empty %}
-
-{% endfor %}
 
 {% endblock%}
