--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -7,7 +7,7 @@
     {% with url_name=request.resolver_match.url_name %}
     <ul class="navbar-nav">
       <li class="nav-item {% if url_name == 'on_site' %}active{% endif %}">
-        <a href="#" class="nav-link">On Site</a>
+        <a href="{% url 'on_site'%}" class="nav-link">On Site</a>
       </li>
       <li class="nav-item {% if url_name == 'pilot_informations' %}active{% endif %}">
         <a href="{% url 'pilot_informations'%}" class="nav-link">Pilotes Informations</a>
@@ -16,7 +16,7 @@
         <a href="{% url 'about' %}" class="nav-link">About</a>
       </li>
       <li class="nav-item {% if url_name == 'contact' %}active{% endif %}">
-        <a href="#" class="nav-link">Contact</a>
+        <a href="{% url 'contact'%}" class="nav-link">Contact</a>
       </li>
       </ul>
       {% if user.is_authenticated %}
